updated photo margin and padding

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     </nav>
     <div class="container pb-4" id="description-container">
       <div class="row">
-        <div class="col-lg-4 text-center">
+        <div class="col-lg-4 text-center mt-5 pt-5">
           <img
-            src="images/ginelle_trans.png"
+            src="images/ginelle_transparent.png"
             class="img-fluid rounded"
             id="ginelle"
           />
