added title to HTML icons

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/010/original/icon-html.png?1711034484"
                 class="skills"
+                title="HTML is the backbone of web design, crucial for content creation."
                 alt="HTML_icon"
               />
               HTML
@@ -215,6 +216,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/004/original/icon-css.png?1711033534"
                 class="skills"
+                title="CSS styles websites, essential for layout and visual appeal."
                 alt="CSS_icon"
               />
               CSS
@@ -223,6 +225,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/011/original/icon-js.png?1711033542"
                 class="skills"
+                title="JavaScript enables user interactions, essential for modern applications."
                 alt="Javascript_icon"
               />
               Javascript
@@ -231,6 +234,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/005/original/editor.png?1701382155"
                 class="skills"
+                title="VSCode is a the #1 tool for writing code easily and quickly."
                 alt="VSCode_icon"
               />
               VSCode
@@ -239,6 +243,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/002/original/icon-api.png?1712224402"
                 class="skills"
+                title="Connect your code to other applications, making them work together."
                 alt="API_icon"
               />
               API
@@ -247,6 +252,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/017/original/github.png?1701382623"
                 class="skills"
+                title="Use GitHub to keep and work on code with others."
                 alt="Github_icon"
               />
               Github
@@ -255,6 +261,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/009/original/hosting.png?1701382192"
                 class="skills"
+                title="Understand hosting to publish and keep websites online."
                 alt="Hosting_icon"
               />
               Hosting
@@ -263,6 +270,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/018/original/icon-python.png?1712224383"
                 class="skills"
+                title="Learn Python for easy and powerful programming across many fields."
                 alt="Python_icon"
               />
               Python
@@ -271,6 +279,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/020/original/icon-data-structure.png?1712224420"
                 class="skills"
+                title="Understand data structures to organize and manage information efficiently."
                 alt="DataStructure_icon"
               />
               Data Structure
@@ -279,6 +288,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/022/original/icon-oop.png?1712224445"
                 class="skills"
+                title="Learn Object-Oriented Programming (OOP) to organize code with objects for clearer structure."
                 alt="OOP_icon"
               />
               OOP
@@ -287,6 +297,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/021/original/icon-file-manipulation.png?1712224473"
                 class="skills"
+                title="Master file manipulation to edit and manage files programmatically."
                 alt="FileManipulation_icon"
               />
               File Manipulation
@@ -295,6 +306,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/023/original/icon-data-visualization.png?1712224496"
                 class="skills"
+                title="Explore data visualization with Python and Plotting to present data in compelling ways."
                 alt="DataVisualization_icon"
               />
               Data Visualization
@@ -303,6 +315,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/024/original/icon-data-manipulation.png?1712224508"
                 class="skills"
+                title="Learn how to use Python to easily filter, map, and organize data with code."
                 alt="DataManipulation_icon"
               />
               Data Manipulation
@@ -311,6 +324,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/001/original/icon-AI.png?1711011711"
                 class="skills rotating"
+                title="Integrate Artificial Intelligence into your code to make your code drastically smarter."
                 alt="AI_icon"
               />
               AI
@@ -319,6 +333,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/019/original/Git-Icon-1788C.png?1710331679"
                 class="skills"
+                title="Learn how to track your code changes and collaborate using Git."
                 alt="Git_icon"
               />
               Git
@@ -327,6 +342,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/003/original/bootstrap.png?1701382150"
                 class="skills"
+                title="Use Bootstrap to quickly design and customize responsive websites."
                 alt="Bootstrap_icon"
               />
               Bootstrap
@@ -335,6 +351,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/014/original/seo.png?1701426631"
                 class="skills"
+                title="Learn SEO (Search Engine Optimization) to boost your website's visibility on search engines."
                 alt="SEO_icon"
               />
               SEO
@@ -343,6 +360,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/013/original/responsive.png?1701382225"
                 class="skills"
+                title="Learn responsive development to make websites work on any device."
                 alt="Responsive_icon"
               />
               Responsive
@@ -441,25 +459,38 @@
     </div>
     <footer class="text-center pt-3">
       <div>
-        <a href="mailto:ginelle.doubek@gmail.com" class="text-center" id="email"
+        <a
+          href="mailto:ginelle.doubek@gmail.com"
+          class="text-center"
+          id="email"
+          title="Email Contact"
           >ginelle.doubek@gmail.com</a
         >
       </div>
       <div>
-        <a href="tel:+41768292353" class="text-center">+41768292353</a>
+        <a href="tel:+41768292353" class="text-center" title="Mobile Number"
+          >+41768292353</a
+        >
       </div>
       <div class="contact_icons">
         <span>
-          <a href="https://www.linkedin.com/in/ginelledoubek/" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/ginelledoubek/"
+            target="_blank"
+            title="Linkedin"
             ><i class="fa fa-linkedin-square" aria-hidden="true"></i
           ></a>
-          <a href="https://github.com/ginedou0315" target="_blank"
+          <a
+            href="https://github.com/ginedou0315"
+            target="_blank"
+            title="Github"
             ><i class="fa fa-github-square" aria-hidden="true"></i
           ></a>
           <a
-            href="https://www.instagram.com/iamginnydou?igsh=eXVwcnB2Z25lOGg4&utm_source=qr"
+            href="https://app.netlify.com/teams/ginedou0315/sites"
             target="_blank"
-            ><i class="fa fa-instagram" aria-hidden="true"></i
+            title="Netlify"
+            ><i class="bx bxl-netlify"></i
           ></a>
         </span>
       </div>
