--- a/index.html
+++ b/index.html
@@ -123,7 +123,11 @@
                 >
                   Education
                 </button>
-                <button class="btn btn-primary px-5" type="button">
+                <button
+                  class="btn btn-primary px-5"
+                  type="button"
+                  aria-controls="multiCollapseExample3"
+                >
                   <a
                     class="download_cv"
                     href="/files/GDoubek_CV_en_feb2025.pdf"
@@ -201,9 +205,9 @@
     <div class="apps-hobby-container m-5 p-5">
       <div class="row ms-5 ps-5">
         <div class="col-7 border-end ps-5">
-          <h1>Skills</h1>
+          <h1 id="skills">Skills</h1>
           <div class="row row-cols-3">
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/010/original/icon-html.png?1711034484"
                 class="skills"
@@ -212,7 +216,7 @@
               />
               HTML
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/004/original/icon-css.png?1711033534"
                 class="skills"
@@ -221,7 +225,7 @@
               />
               CSS
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/011/original/icon-js.png?1711033542"
                 class="skills"
@@ -230,7 +234,7 @@
               />
               Javascript
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/005/original/editor.png?1701382155"
                 class="skills"
@@ -239,7 +243,7 @@
               />
               VSCode
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/002/original/icon-api.png?1712224402"
                 class="skills"
@@ -248,7 +252,7 @@
               />
               API
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/017/original/github.png?1701382623"
                 class="skills"
@@ -257,7 +261,7 @@
               />
               Github
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/009/original/hosting.png?1701382192"
                 class="skills"
@@ -266,7 +270,7 @@
               />
               Hosting
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/018/original/icon-python.png?1712224383"
                 class="skills"
@@ -275,7 +279,7 @@
               />
               Python
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/020/original/icon-data-structure.png?1712224420"
                 class="skills"
@@ -284,7 +288,7 @@
               />
               Data Structure
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/022/original/icon-oop.png?1712224445"
                 class="skills"
@@ -293,7 +297,7 @@
               />
               OOP
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/021/original/icon-file-manipulation.png?1712224473"
                 class="skills"
@@ -302,7 +306,7 @@
               />
               File Manipulation
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/023/original/icon-data-visualization.png?1712224496"
                 class="skills"
@@ -311,7 +315,7 @@
               />
               Data Visualization
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/024/original/icon-data-manipulation.png?1712224508"
                 class="skills"
@@ -320,7 +324,7 @@
               />
               Data Manipulation
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/001/original/icon-AI.png?1711011711"
                 class="skills rotating"
@@ -329,7 +333,7 @@
               />
               AI
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/019/original/Git-Icon-1788C.png?1710331679"
                 class="skills"
@@ -338,7 +342,7 @@
               />
               Git
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/003/original/bootstrap.png?1701382150"
                 class="skills"
@@ -347,7 +351,7 @@
               />
               Bootstrap
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/014/original/seo.png?1701426631"
                 class="skills"
@@ -356,7 +360,7 @@
               />
               SEO
             </div>
-            <div class="col">
+            <div class="col mt-2">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/013/original/responsive.png?1701382225"
                 class="skills"
@@ -368,39 +372,39 @@
           </div>
         </div>
         <div class="col-5 ps-5">
-          <h1>Hobbies</h1>
-          <div class="row row-cols-3 text-center">
-            <div class="col hobbies">
+          <h1 id="hobbies">Hobbies</h1>
+          <div class="row row-cols-3 text-center mt-3">
+            <div class="col hobbies mt-2">
               <i class="bx bx-tennis-ball bx-lg bx-rotate-270"></i>
               <div>Tennis</div>
             </div>
-            <div class="col hobbies">
+            <div class="col hobbies mt-2">
               <i class="bx bx-run bx-lg"></i>
               <div>Running(Race)</div>
             </div>
-            <div class="col hobbies">
+            <div class="col hobbies mt-2">
               <i class="bx bx-cycling bx-lg"></i>
               <div>Cycling</div>
             </div>
-            <div class="col hobbies">
+            <div class="col hobbies mt-2">
               <i class="bx bx-cable-car bx-lg"></i>
               <div>Winter Sports</div>
             </div>
-            <div class="col hobbies">
+            <div class="col hobbies mt-2">
               <i class="bx bx-dumbbell bx-lg"></i>
               <div>Fitness</div>
             </div>
 
-            <div class="col hobbies">
+            <div class="col hobbies mt-2">
               <i class="bx bx-landscape bx-lg"></i>
               <div>Hiking</div>
             </div>
 
-            <div class="col hobbies">
+            <div class="col hobbies mt-2">
               <i class="bx bxs-plane-alt bx-lg"></i>
               <div>Travel</div>
             </div>
-            <div class="col hobbies">
+            <div class="col hobbies mt-2">
               <i class="bx bx-palette bx-lg"></i>
               <div>Paint</div>
             </div>
