--- a/index.html
+++ b/index.html
@@ -380,11 +380,11 @@
             </div>
             <div class="col hobbies mt-2">
               <i class="bx bx-run bx-lg"></i>
-              <div>Running(Race)</div>
+              <div>Run(Race)</div>
             </div>
             <div class="col hobbies mt-2">
               <i class="bx bx-cycling bx-lg"></i>
-              <div>Cycling</div>
+              <div>Cycle</div>
             </div>
             <div class="col hobbies mt-2">
               <i class="bx bx-cable-car bx-lg"></i>
@@ -397,7 +397,7 @@
 
             <div class="col hobbies mt-2">
               <i class="bx bx-landscape bx-lg"></i>
-              <div>Hiking</div>
+              <div>Hike</div>
             </div>
 
             <div class="col hobbies mt-2">
@@ -407,6 +407,10 @@
             <div class="col hobbies mt-2">
               <i class="bx bx-palette bx-lg"></i>
               <div>Paint</div>
+            </div>
+            <div class="col hobbies mt-2">
+              <i class="bx bx-cake bx-lg"></i>
+              <div>Cook/Bake</div>
             </div>
           </div>
         </div>
