--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         </div>
       </div>
     </div>
-    <h1 class="text-center pt-5">Certifications</h1>
+    <h1 class="text-center pt-5" id="certification">Certifications</h1>
     <div class="photos-wrapper mb-3">
       <div class="imageContainer">
         <a href="https://success.simplilearn.com/85031165" target="_blank"
