Updated Resume HTML

--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@
                     <div class="card card-body" id="education">
                       <div class="timeline-area">
                         <div class="education-description">
+                          <h3>Web Developing Bootcamp</h3>
+                          <h4>SheCodes - https://www.shecodes.io/</h4>
+                          <p>2024 - current</p>
+                        </div>
+                        <div class="education-description">
                           <h3>Prof. Certificate Program in Data Analytics</h3>
                           <h4>Simplilearn - University of Purdue</h4>
                           <p>2022-2023</p>
