--- a/resume.html
+++ b/resume.html
@@ -91,6 +91,20 @@
                 their decisions.
               </p>
             </div>
+            <div class="content-box">
+              <div class="timeline-date">
+                <i class="bx bx-calendar"></i> 2014 - 2016
+              </div>
+              <h3>Regional Sales Controller</h3>
+              <small>Nestle Manila, Philippines</small>
+              <p>
+                Ensured transparency in regional trade spend, expenses, assets,
+                and funds with monitoring tools. Trained and coached Sales
+                Managers on selling and trading techniques. Conducted trade
+                checks and audits to verify account claims. Implemented measures
+                to improve accounts receivable and market returns.
+              </p>
+            </div>
           </div>
         </div>
         <div class="timeline-col ps-3">
@@ -98,6 +112,21 @@
             <i class="bx bxs-graduation"></i> Education
           </h2>
           <div class="timeline-box">
+            <div class="content-box">
+              <div class="timeline-date">
+                <i class="bx bx-calendar"></i> 2024 - current
+              </div>
+              <h3>Web Developing Bootcamp</h3>
+              <small>SheCodes - https://www.shecodes.io/</small>
+              <p>
+                SheCodes is an online platform that offers coding workshops
+                specifically designed for women. Their mission is to bridge the
+                gender gap in the tech industry by teaching coding skills to
+                women and empowering them to pursue careers in technology. They
+                offer various workshops, including free introductory classes,
+                and cover topics such as HTML, CSS, JavaScript, and more.
+              </p>
+            </div>
             <div class="content-box">
               <div class="timeline-date">
                 <i class="bx bx-calendar"></i> 2022 - 2023
@@ -153,66 +182,7 @@
         </div>
       </div>
     </div>
-    <div class="skills-container">
-      <div class="row object-fit-contain">
-        <div class="col-6">
-          <h3 class="pt-3 me-5">Hard Skills</h3>
-          <div class="skill">
-            <div class="skill-name">HTML, CSS, Javascript</div>
-            <div class="skill-bar">
-              <div class="skill-per" per="80%" style="max-width: 80%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill-name">Python</div>
-            <div class="skill-bar">
-              <div class="skill-per" per="70%" style="max-width: 70%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill-name">Tableau</div>
-            <div class="skill-bar">
-              <div class="skill-per" per="80%" style="max-width: 80%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill-name">
-              Excelsheets, Powerpoint & other MS Office
-            </div>
-            <div class="skill-bar">
-              <div class="skill-per" per="90%" style="max-width: 90%"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-5">
-          <h3 class="pt-3">Soft Skills</h3>
-          <div class="skill">
-            <div class="skill-name">Problem Solving</div>
-            <div class="skill-bar">
-              <div class="skill-per" per="90%" style="max-width: 90%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill-name">Innovation</div>
-            <div class="skill-bar">
-              <div class="skill-per" per="80%" style="max-width: 80%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill-name">Adaptability</div>
-            <div class="skill-bar">
-              <div class="skill-per" per="80%" style="max-width: 80%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill-name">Flexibility</div>
-            <div class="skill-bar">
-              <div class="skill-per" per="90%" style="max-width: 90%"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
