updated projects CSS

--- a/project.html
+++ b/project.html
@@ -21,7 +21,12 @@
     <title>Project Page</title>
   </head>
   <body>
-    <a href="index.html" class="homepage-link mt-5 mb-3">Back to homepage</a>
+    <div class="language-switcher text-center">
+      <button onclick="switchLanguage('en')">EN</button>
+      |
+      <button onclick="switchLanguage('de')">DE</button>
+    </div>
+    <a href="/index.html" class="homepage-link mt-3 mb-3">Back to homepage</a>
     <h1 class="text-center">Projects</h1>
     <h3 class="text-center py-4">Some of the projects I have worked on...</h3>
     <br />
