--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,12 @@
     <title>About Ginelle Doubek</title>
   </head>
   <body>
-    <a href="/index.html" class="text-center homepage-link mt-5 mb-3"
+    <div class="language-switcher text-center">
+      <button onclick="switchLanguage('en')">EN</button>
+      |
+      <button onclick="switchLanguage('de')">DE</button>
+    </div>
+    <a href="/index.html" class="text-center homepage-link mt-3 mb-3"
       >Back to homepage</a
     >
     <h1 class="text-center">My Resume</h1>
