adjusted some margin and padding

--- a/project.html
+++ b/project.html
@@ -58,7 +58,7 @@
           <iframe
             id="inlineFrameExample"
             title="Inline Frame Example"
-            width="100%"
+            width="650"
             height="450"
             src="https://ephemeral-pasca-7021d5.netlify.app/"
           >
@@ -129,7 +129,7 @@
           <iframe
             id="inlineFrameExample"
             title="Inline Frame Example"
-            width="100%"
+            width="650"
             height="450"
             src="https://ginnys-weather-forecast-project.netlify.app/"
           >
