Adding the translation

--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
                 EULAR - European Alliance of Associations for Rheumatology /
                 Zurich, Switzerland
               </small>
-              <p>
+              <p id="jobCongress">
                 Mainly responsible for Abstract Programme at the annual EULAR
                 Congress, I managed and consolidated submitted abstracts and
                 coordinated their evaluation with Abstract Chairs and Reviewers.
@@ -70,7 +70,7 @@
               </div>
               <h3>Business Development & Acquisition Manager</h3>
               <small>Claviger Middle East, Dubai & Switzerland</small>
-              <p>
+              <p id="jobClaviger">
                 Responsible for prospecting and acquiring new hotels to
                 represent in the Middle East, managing all sales activities
                 aimed at acquiring and developing new accounts. Coordinated with
@@ -86,7 +86,7 @@
               </div>
               <h3>Global Sales Manager</h3>
               <small>Starwood International, Dubai, UAE</small>
-              <p>
+              <p id="jobHotel">
                 Successfully drove key sales activities for Starwood programs in
                 UAE and Greece, including client appointments, promotions,
                 familiarization trips, and hotel sales trips to increase market
