--- a/resume.html
+++ b/resume.html
@@ -106,7 +106,7 @@
               </div>
               <h3>Regional Sales Controller</h3>
               <small>Nestle Manila, Philippines</small>
-              <p>
+              <p id="jobController">
                 Ensured transparency in regional trade spend, expenses, assets,
                 and funds with monitoring tools. Trained and coached Sales
                 Managers on selling and trading techniques. Conducted trade
@@ -128,7 +128,7 @@
               </div>
               <h3>Web Developing Bootcamp</h3>
               <small>SheCodes - https://www.shecodes.io/</small>
-              <p>
+              <p id="firstEducation">
                 SheCodes is an online platform that offers coding workshops
                 specifically designed for women. Their mission is to bridge the
                 gender gap in the tech industry by teaching coding skills to
@@ -143,7 +143,7 @@
               </div>
               <h3>Professional Certificate Program in Data Analytics</h3>
               <small>Simplilearn - University of Purdue</small>
-              <p>
+              <p id="secondEducation">
                 In Simplilearn’s Professional Certificate Program in Data
                 Analytics, in partnership with Purdue University and
                 collaboration with IBM, the learner mastered statistics and data
